# vg

./: .gitignore  build-exe.yml  main.py  package.json  tsconfig.base.json
.github/workflows/: build-exe.yml  build.yml  ci.yml  main.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/db/migrations/: env.py  script.py.mako
apps/api/app/db/migrations/versions/: 0001_init.py
apps/api/app/routes/: auth.py  billing.py  projects.py  videos.py
apps/api/app/services/: auth.py  billing.py  storage.py
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/: main.ts
apps/renderer/: Dockerfile  package.json
apps/renderer/src/: build_manifest.ts  db.ts  index.ts  render.ts
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/video/[id]/: page.tsx
apps/web/components/: DownloadButton.tsx  PromptForm.tsx  StatusProgress.tsx  VideoPlayer.tsx
apps/worker/: Dockerfile  package.json  tsconfig.json
apps/worker/src/: db.ts  enqueue_server.ts  flow_client.ts  index.ts  llm_client.ts  queue.ts  retry.ts
apps/worker/src/pipeline/: index.ts
infra/: docker-compose.yml
infra/k8s/: vfg.yaml
